# BCAR

./: README.md  pyproject.toml  setup.py
BCAR/: .gitignore  BCAR_v1_14.py  BCAR_v1_15.py  README.md  __init__.py  build_consensus.c  build_consensus.pyx  needleman_wunsch.c  needleman_wunsch.pyx
BCAR.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
test/: Test_barcodes.fastq
