[build-system]
requires = ["setuptools", "wheel", "Cython"]
build-backend = "setuptools.build_meta"

[project]
name = "BCAR"
version = "1.14.0"
description = "Barcode Collapse by Aligning Reads"
authors = [
    { name = "Your Name", email = "your.email@example.com" },
]
license = { text = "MIT" }  # Replace with your chosen license
dependencies = [
    "Cython",
]

[tool.setuptools]
packages = ["BCAR"]

[tool.setuptools.extension]
needleman_wunsch = { sources = ["needleman_wunsch.pyx"], language = "c" }

[tool.black]
line-length = 88
target-version = ["py39"]

